--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +16,27 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  width: 100%;
+  display: flex;
+  padding: 32px;
+}
+
+.item {
+  width: 100%;
+}
+
+.code-preview {
+  padding: 16px;
+}
+
+pre {
+  padding: 8px;
+  background: transparent !important;
+}
+
+textarea {
+  width: 100%;
+  height: 300px;
+  padding: 8px;
 }
